tests/analyzer/errors/fn_default_param.rv
fn foo(a: int = 5.) {}

fn bar(a = 4.) {
    var b: int = a
}

fn main() {}
